Cell Tap Action Functionality Implemented

--- a/Leap/Info.plist
+++ b/Leap/Info.plist
@@ -24,6 +24,6 @@
 	<key>UIStatusBarStyle</key>
 	<string>UIStatusBarStyleLightContent</string>
 	<key>UIUserInterfaceStyle</key>
-	<string>Light Content</string>
+	<string>Light</string>
 </dict>
 </plist>
